event preferences overflow fix

--- a/events/static/events/css/detail.css
+++ b/events/static/events/css/detail.css
@@ -62,6 +62,7 @@ div.container-text a:hover{
     padding: 20px;
     background-color: var(--primaryColorLighter);
     border-radius: 5px;
+    overflow: scroll;
 }
 
 .header {
